--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@ant-design/icons-vue": "~7.0.1",
     "@iconify/vue": "^5.0.0",
     "@tinymce/tinymce-vue": "^6.1.0",
+    "@types/socket.io-client": "^3.0.0",
     "@vueuse/core": "~13.2.0",
     "ant-design-vue": "~4.2.6",
     "axios": "~1.9.0",
@@ -71,6 +72,7 @@
     "pinia-plugin-persistedstate": "^4.3.0",
     "qiniu-js": "^3.4.2",
     "qs": "~6.14.0",
+    "socket.io-client": "^4.8.1",
     "sortablejs": "~1.15.6",
     "tinymce": "^7.9.0",
     "vue": "~3.5.14",
